# python_homework_nlp

./: .dir-locals.el  .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: python_app.yml  release.yml
.github/worklows/: python_app.yml  release.yml
docs/: design.plantuml
python_homework_nlp/: common.py  counter.py  file_reader.py  main.py  normaliser.py  test_main.py
python_homework_nlp/renderers/: __init__.py  base_renderer.py  console_renderer.py  csv_renderer.py  html_renderer.py  json_renderer.py  markdown_renderer.py
tests/: conftest.py  test_common.py  test_counter.py  test_file_reader.py  test_main.py  test_normaliser.py  test_python_homework_nlp.py
tests/renderers/: test_csv_renderer.py  test_json_renderer.py
